# apollo-federation-subgraph-compatibility

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .npmignore  .prettierignore  .prettierrc  .semgrepignore  CODEOWNERS  COMPATIBILITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SUBGRAPH_GUIDE.md  act-test.event  docker-compose.yaml  jest.config.js  mkdocs.yml  package-lock.json  package.json  router.yaml  simple-schema.apollo-workbench  supergraph-compose.yaml.template  supergraph-config.js.template  supergraph-config.yaml.template  supergraph-fed2.graphql  supergraph-local.graphql  supergraph-local.yaml  supergraph.config.js  supergraph.graphql  supergraph.yaml  test_all.sh  tsconfig.json
.changeset/: config.json
.docker/: graph-router.Dockerfile  inventory.Dockerfile  users.Dockerfile
.github/: renovate.json5
.github/workflows/: ci.yaml  cleanup.yaml  comment-all.yaml  comment.yaml  library_metadata.yaml  lint.yaml  local.yaml  release.yaml  save-pr-info.yaml  test-all.yaml  test-hosted-subgraph.yaml  test-subgraph-absinthe-federation.yaml  test-subgraph-apollo-server.yaml  test-subgraph-appsync.yaml  test-subgraph-ariadne.yaml  test-subgraph-async-graphql.yaml  (+35 more)
images/: testing-flow.drawio
implementations/async-graphql/federation-async-graphql-compatibility/: Cargo.toml  build.rs
implementations/async-graphql/federation-async-graphql-compatibility/src/: endpoints.rs  main.rs
src/: compatibilityTest.ts  composeSupergraph.ts  graph-router.ts  index.ts  reportGenerator.ts  startSupergraph.ts  testRunner.ts
(+658 files in other folders)
